--- a/style.css
+++ b/style.css
@@ -6,108 +6,118 @@
     box-sizing: border-box;
 }
 
+*:hover
+*:active, 
+*:focus {
+    outline: 0px !important;
+}
+
 html {
     font-size: 15px;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
     width: 100vw;
-    background: url(./images/jacket_blurred.jpg) center center;
-    background-attachment: fixed;
-    background-size: cover;
-    display: grid;
+    height: 100vh;
+    display: flex;
+    overflow: hidden;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
+    background: url(./images/jacket_blurred.jpg) center center;
 }
 
 main {
-    max-width: 25rem;
-    margin: 0 auto;
     height: 100%;
-    align-items: center;
-    justify-content: space-around;
     display: flex;
+    margin: 2rem auto;
+    align-items: center;
     flex-direction: column;
+    transition: .2s ease-out;
+    justify-content: space-around;
 }
 
 .X6DENT__Picture {
     width: 80%;
+    margin-bottom: 2rem;
 }
 
 .X6DENT__Picture > img {
     width: 100%;
-    box-shadow: 0px 5px 10px 10px rgb(0 0 0 / 10%);
     animation: 1s ease-out 0s 1 slideInFromBottom;
+    box-shadow: 0px 5px 10px 10px rgb(0 0 0 / 10%);
 }
 
 .X6DENT__Links {
-    position: relative;
-    background-color: white;
+    z-index: 1;
     width: 90%;
     padding: 1.2rem;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
+    overflow: hidden;
     border-radius: 5px;
     position: relative;
-    z-index: 1;
     background: inherit;
-    overflow: hidden;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
 }
 
 .X6DENT__Links > li {
-    position: relative;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 6px;
-    height: 3rem;
-    display: inline-block;
     width: 100%;
-    margin-bottom: 1rem;
-    text-align: center;
-    line-height: 3rem;
-    text-decoration: none;
+    height: 3rem;
     font-size: 1.5rem;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    box-shadow: 0px 6px 20px 4px rgb(255 255 255 / 19%);
+    line-height: 3rem;
+    position: relative;
+    border-radius: 6px;
+    display: inline-block;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #9b78e0 50%);
+    background-size: 220%;
+    transition: all .4s;
+    box-shadow: 0px 6px 20px 4px rgb(255 255 255 / 21%);
 }
+
+.X6DENT__Links > li:active,
+.X6DENT__Links > li:hover {
+    background-position: 100%;
+}
+
+*:outline {
+    display: none;
+}
+
+.X6DENT__Links > li:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
 
 .X6DENT__Links:before {
     content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-    filter: blur(10px);
+    z-index: -1;
     margin: -20px;
+    position: absolute;
+    filter: blur(10px);
+    background: inherit;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
 }
 
-.X6DENT__Links > li:before {
-    content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-    filter: blur(10px);
-    margin: -20px;
-}
 
 .X6DENT__Links > li > a {
+    display: flex;
+    color: #23002b;
+    margin-left: 2rem;
+    align-items: center;
     text-decoration: none;
-    color: black;
+    justify-content: start;
 }
 
 
-.X6DENT__Links > li:active {
-    background-color: green;
+.X6DENT__Links > li > a > svg {
+    margin-right: 2rem;
 }
+
 
 @keyframes slideInFromBottom {
     0% {
@@ -117,5 +127,19 @@ main {
     100% {
         opacity: 1;
         transform: scale(1);
+    }
+}
+
+@media screen and (min-width: 750px) {
+    
+    main {    
+        margin: auto 2rem;
+        flex-direction: row;
+    }
+
+    .X6DENT__Picture > img {
+        width: 30rem;
+        height: 30rem;
+        margin-right: 2rem;
     }
 }
