--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body {
     display: flex;
     overflow: hidden;
     align-items: center;
-    justify-content: center;
     background-size: cover;
     background-attachment: fixed;
+    justify-content: space-around;
     background: url(./images/jacket_blurred.jpg) center center;
 }
 
@@ -75,19 +75,14 @@ main {
     box-shadow: 0px 6px 20px 4px rgb(255 255 255 / 21%);
 }
 
+
 .X6DENT__Links > li:active,
 .X6DENT__Links > li:hover {
     background-position: 100%;
 }
-
-*:outline {
-    display: none;
-}
-
 .X6DENT__Links > li:not(:last-child) {
     margin-bottom: 1rem;
 }
-
 
 .X6DENT__Links:before {
     content: "";
@@ -103,7 +98,6 @@ main {
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
 }
 
-
 .X6DENT__Links > li > a {
     display: flex;
     color: #23002b;
@@ -113,11 +107,9 @@ main {
     justify-content: start;
 }
 
-
 .X6DENT__Links > li > a > svg {
     margin-right: 2rem;
 }
-
 
 @keyframes slideInFromBottom {
     0% {
