--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
 main {
     height: 100%;
     display: flex;
-    margin: 2rem auto;
     align-items: center;
     flex-direction: column;
     transition: .2s ease-out;
@@ -41,7 +40,6 @@ main {
 
 .X6DENT__Picture {
     width: 80%;
-    margin-bottom: 2rem;
 }
 
 .X6DENT__Picture > img {
@@ -111,6 +109,21 @@ main {
     margin-right: 2rem;
 }
 
+.X6DENT__Video {
+    position: absolute;
+    height: auto;
+    width: 100%;
+    z-index: -2;
+}
+
+.X6DENT__Overlay {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+    background-color: #9675de8f;
+}
+
 @keyframes slideInFromBottom {
     0% {
         opacity: 0;
@@ -123,7 +136,6 @@ main {
 }
 
 @media screen and (min-width: 750px) {
-    
     main {    
         margin: auto 2rem;
         flex-direction: row;
@@ -133,5 +145,12 @@ main {
         width: 30rem;
         height: 30rem;
         margin-right: 2rem;
+    }
+}
+
+@media (max-aspect-ratio: 1/1) {
+    .X6DENT__Video {
+        height: 100%;
+        width: auto;
     }
 }
