--- a/style.css
+++ b/style.css
@@ -26,15 +26,17 @@ body {
     background-size: cover;
     background-attachment: fixed;
     justify-content: space-around;
-    background: url(./images/jacket_blurred.jpg) center center;
+    /* background: url(./images/jacket_blurred.jpg) center center; */
 }
 
 main {
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     transition: .2s ease-out;
+    overflow: hidden;
     justify-content: space-around;
 }
 
@@ -111,15 +113,16 @@ main {
 
 .X6DENT__Video {
     position: absolute;
-    height: auto;
+    height: 100%;
     width: 100%;
     z-index: -2;
+    object-fit: cover;
 }
 
 .X6DENT__Overlay {
     position: absolute;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: -1;
     background-color: #9675de8f;
 }
@@ -145,12 +148,5 @@ main {
         width: 30rem;
         height: 30rem;
         margin-right: 2rem;
-    }
-}
-
-@media (max-aspect-ratio: 1/1) {
-    .X6DENT__Video {
-        height: 100%;
-        width: auto;
     }
 }
