Updating video height and width

--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ main {
 
 .X6DENT__Video {
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     z-index: -2;
     object-fit: cover;
 }
