--- a/style.css
+++ b/style.css
@@ -19,45 +19,86 @@ html {
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     background-size: cover;
     background-attachment: fixed;
     justify-content: space-around;
-    /* background: url(./images/jacket_blurred.jpg) center center; */
 }
 
 main {
-    height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
     flex-direction: column;
     transition: .2s ease-out;
-    overflow: hidden;
     justify-content: space-around;
+    overflow-y: scroll;
 }
 
 .X6DENT__Picture {
+    margin-top: 2rem;
     width: 350px;
 }
 
 .X6DENT__Picture > img {
     width: 100%;
-    animation: 1s ease-out 0s 1 slideInFromBottom;
-    box-shadow: 0px 5px 10px 10px rgb(0 0 0 / 10%);
+    /* animation: 1s ease-out 0s 1 slideInFromBottom;
+    box-shadow: 0px 5px 10px 10px rgb(0 0 0 / 10%); */
+}
+
+
+.X6DENT__Clips {
+    overflow: hidden;
+    border-radius: 5px;
+    width: 90%;
+    margin: 2rem 0;
+    padding: 1.2rem;
+    position: relative;
+    background: inherit;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
+}
+
+.X6DENT__Clips:before {
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    margin: -20px;
+    position: absolute;
+    filter: blur(10px);
+    background: inherit;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+}
+
+.X6DENT__Clip {
+    box-shadow: 0px 6px 20px 4px rgb(255 255 255 / 21%);
+}
+
+
+.X6DENT__Clip > iframe {
+    display:block; 
+    border-radius: 6px;
+}
+
+.X6DENT__Clip:nth-child(1) {
+    margin-bottom: 1rem;
 }
 
 .X6DENT__Links {
     max-width: 350px;
     z-index: 1;
     width: 90%;
+    max-width: 400px;
     padding: 1.2rem;
     overflow: hidden;
     border-radius: 5px;
     position: relative;
     background: inherit;
+    margin-bottom: 2rem;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
 }
 
@@ -112,18 +153,22 @@ main {
 }
 
 .X6DENT__Video {
-    position: absolute;
-    height: 100vh;
+    top: 0;
+    bottom: 0;
+    position: fixed;
+    height: 100%;
     width: 100vw;
     z-index: -2;
     object-fit: cover;
 }
 
 .X6DENT__Overlay {
-    position: absolute;
-    height: 100vh;
+    position: fixed;
+    height: 100%;
     width: 100vw;
     z-index: -1;
+    top: 0;
+    bottom: 0;
     background-color: #9675de8f;
 }
 
@@ -139,7 +184,8 @@ main {
 }
 
 @media screen and (min-width: 750px) {
-    main {    
+    main {
+        height: 100vh;
         flex-direction: row;
     }
     .X6DENT__Picture {
