--- a/style.css
+++ b/style.css
@@ -207,3 +207,17 @@ main {
         width: 200px;
     }
 }
+
+#aby {
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    transform: translateY(100%);
+}
+
+#aby.show {
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    transform: translateY(0%);
+}
