--- a/style.css
+++ b/style.css
@@ -208,14 +208,47 @@ main {
     }
 }
 
-#aby {
+#zbraaa {
+    transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
     bottom: 0;
     z-index: 1;
     transform: translateY(100%);
 }
 
-#aby.show {
+#zbraaa.show {
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    transform: translateY(0%);
+}
+
+
+#halo {
+    transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    transform: translateY(100%);
+}
+
+#halo.show {
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    transform: translateY(0%);
+}
+
+
+#bang {
+    transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    transform: translateY(100%);
+}
+
+#bang.show {
     position: fixed;
     bottom: 0;
     z-index: 1;
