Adding Double V clip

--- a/style.css
+++ b/style.css
@@ -84,7 +84,8 @@ main {
     border-radius: 6px;
 }
 
-.X6DENT__Clip:nth-child(1) {
+.X6DENT__Clip:nth-child(1),
+.X6DENT__Clip:nth-child(2) {
     margin-bottom: 1rem;
 }
 
