--- a/style.css
+++ b/style.css
@@ -212,9 +212,9 @@ main {
 #zbraaa {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
-    bottom: 0;
+    bottom: 100px;
     z-index: -3;
-    transform: translateY(100%);
+    transform: translateY(150%);
 }
 
 #zbraaa.show {
@@ -228,9 +228,9 @@ main {
 #halo {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
-    bottom: 0;
+    bottom: 100px;
     z-index: -3;
-    transform: translateY(100%);
+    transform: translateY(150%);
 }
 
 #halo.show {
@@ -244,9 +244,9 @@ main {
 #bang {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
-    bottom: 0;
+    bottom: 100px;
     z-index: -3;
-    transform: translateY(100%);
+    transform: translateY(150%);
 }
 
 #bang.show {
